syntax = "proto3";
package protobufs.service;

import "protobufs/instances.proto";
import "protobufs/ipss.proto";

message WhoAreYourParams {}

message ServiceExtended {
    ipss.Multihash multihash = 1;
    ipss.Service service = 2;
}

message File {
    string file = 1;
}

service Solver {
    rpc StartTrain ( WhoAreYourParams) returns (WhoAreYourParams) {}
    rpc StopTrain ( WhoAreYourParams) returns (WhoAreYourParams) {}
    rpc GetTensor ( WhoAreYourParams) returns (stream ipss.Tensor) {}
    rpc UploadSolver (ServiceExtended) returns (WhoAreYourParams) {}
    rpc StreamLogs (WhoAreYourParams) returns (stream File){}
    rpc Solve(instances.Cnf) returns (instances.Interpretation) {}
}